@@ -1,3 +1,15 @@
+2010-06-15  Kinuko Yasuda  <kinuko@chromium.org>
+
+        Reviewed by David Levin.
+
+        Fix compilation errors in BlobBuilder with FILE_WRITER enabled
+        https://bugs.webkit.org/show_bug.cgi?id=40606
+
+        No functionality change so no new tests.
+
+        * html/BlobBuilder.cpp:
+        * html/BlobBuilder.h:
+
 2010-06-15  Jian Li  <jianli@chromium.org>
 
         Reviewed by David Levin.
